# g0v0-server

./: .env.example  Dockerfile  docker-compose.somtum.yml  main.py  pyproject.toml
app/: config.py  const.py
app/calculating/: osu.py
app/calculating/calculators/: performance_server.py
app/database/: score.py  user.py
app/models/: beatmap.py  score.py
app/router/: auth.py  somtum_assets.py
app/router/notification/: banchobot.py  message.py
app/router/v2/: __init__.py  beatmapset.py  comments.py  ranking.py  score.py  user.py
app/service/: audio_proxy_service.py
app/service/stable_import/: __init__.py  bancho_db.py  importer.py  mappings.py  replay.py  simulator.py
app/services/: irc_bridge.py
app/tasks/: __init__.py  create_banchobot.py  stable_import.py
migrations/versions/: 2026-06-18_b312725e4acb_score_add_nsmall_tick_miss.py
scripts/: import_stable_scores.py
spectator-patch/: Dockerfile  patch_dll.py
tools/: recalculate.py
