[project]
name = "g0v0-server"
version = "0.1.0"
description = "An osu!(lazer) private server that is easy to deploy, highly scalable, and fully featured to meet diverse operational needs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.0.0",
    "aiofiles>=24.1.0",
    "aiomysql>=0.2.0",
    "alembic>=1.12.1",
    "apscheduler>=3.11.0",
    "irctokens>=2.0",
    "bcrypt>=4.1.2",
    "bleach>=6.4.0",
    "cryptography>=48.0.0",
    "fast-depends>=3.0.5",
    "fastapi>=0.136.3",
    "fastapi-limiter>=0.2.0",
    "g0v0-migrations",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "loguru>=0.7.3",
    "maxminddb>=2.8.2",
    "newrelic>=13.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "regex>=2026.5.9",
    "sentry-sdk[fastapi,httpx,loguru,sqlalchemy]>=2.61.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "tinycss2>=1.4.0",
    "uvicorn[standard]>=0.49.0",
]
authors = [{ name = "GooGuTeam" }]

[project.optional-dependencies]
rosu = [
    "rosu-pp-py>=4.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
  "FAST",  # FastAPI
  "YTT",   # flake8-2020
  "S",     # flake8-bandit
  "INP",   # flake8-no-pep420
  "SIM",   # flake8-simplify
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "N",     # pep8-naming
  "FURB"   # refurb
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "S101",   # assert
  "S311",   # suspicious-non-cryptographic-random-usage
]

[tool.ruff.lint.extend-per-file-ignores]
"tools/*.py" = ["PTH", "INP001","ASYNC250"]
"scripts/*.py" = ["PTH", "INP001"]
"migrations/**/*.py" = ["INP001"]
"app/achievements/*.py" = ["INP001", "ARG"]
"app/router/**/*.py" = ["ARG001"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
force-wrap-aliases = true
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing_extensions"]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"

typeCheckingMode = "standard"
disableBytesTypePromotions = true
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
exclude = ["migrations/", ".venv/", "venv/"]

[tool.uv.workspace]
members = [
    "packages/osupyparser",
    "packages/g0v0-migrations",
]

[tool.uv.sources]
g0v0-migrations = { workspace = true }

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.60.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "ruff>=0.15.16",
    "types-aioboto3[aioboto3,essential]>=15.5.0",
]
